<resources>
    <string name="app_name" translatable="false">OpenAir 3D</string>
    <string name="facebook_app_id" translatable="false">1885838671606856</string>
    <string name="facebook_client_token" translatable="false">8c208654dab44e0185a31b74e7ee644f</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1885838671606856</string>
    <string name="retryDialog">Try again</string>
    <string name="setup">Setup</string>
    <string name="OK">OK</string>
    <string name="checkInternet">Please connect internet using app</string>
    <string name="game_view_content_description">Game view</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="rename_model">Rename Model</string>
    <string name="register"><u>Register</u></string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password1">Forgot \nPassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="continue_">Continue</string>
    <string name="str_submit">Submit</string>
    <string name="str_verify">Verify &amp; Proceed</string>
    <string name="create_account">Create \nAccount</string>
    <string name="create_account1">Create Account</string>
    <string name="home">Home</string>
    <string name="members">Members</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="str_new_password">New password</string>
    <string name="str__confirm_new_password">Confirm new password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_not_have">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="str_logout">Logout</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in_social">Sign in with Apple or Google</string>
    <string name="subject">LuxAI View Model</string>
    <string name="welcome_title">Welcome To Halo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_error">Please enter a valid email address.</string>
    <string name="phone_error">Please enter a valid mobile number.</string>
    <string name="password_error">Please check your password. Password should contain at least 8 characters, uppercase, lowercase, number and special characters.</string>
    <string name="other_sign_in">Other ways to sign in</string>
    <string name="apple_id">Apple ID</string>
    <string name="google">Google</string>
    <string name="str_scene_scan">Scene scan</string>
    <string name="str_scene">Scene</string>
    <string name="str_object_scan">Object scan</string>
    <string name="str_body_scan">Body scan</string>
    <string name="str_body_scan1">Body scan</string>
    <string name="str_object">Object</string>
    <string name="str_enter_otp">OTP Verification</string>
    <string name="password_confirm_error">Password mismatch. Please check and try again</string>
    <string name="empty">You dont\'t have any models yet. Please scan to obtain models</string>
    <string name="str_no_models_found">No models found</string>
    <string name="empty_comment">No comments</string>
    <string name="empty_tag">There is no tags</string>
    <string name="welcome_content">You can create a 3D digital clone of spaces powered by our advanced reconstruction AI</string>
    <string name="password_notice">Password should be atleast 8 characters with 1 number, 1 lowercase, 1 uppercase, and 1 special character</string>
    <string name="show_depth">Show Depth</string>
    <string name="hide_depth">Hide Depth</string>
    <string name="depth_not_available">Depth Not Available</string>
    <string name="search_site">Please type a site name</string>
    <string name="str_welcome">WELCOME</string>
    <string name="str_scan_and_create">Scan and create instant \n3D spaces with your mobile device</string>
    <string name="str_get_started">Get started</string>
    <string name="str_welcome_back">Welcome Back</string>
    <string name="str_sign_in_continue">Sign in to continue</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_or_continue">Or continue with</string>
    <string name="str_new_open_air">New to OpenAir?</string>
    <string name="str_receive_code">Didn\’t receive code?</string>
    <string name="str_create_an_account">Create an account</string>
    <string name="str_joined_us">Already a user?</string>
    <string name="str_term_conditions">By signing up, you agree to our Terms of Conditions and Privacy Policy.</string>
    <string name="str_dont_worry">Please enter email associated with \nyour account.</string>
    <string name="str_four_digit">An 6 digit code has been sent to \nyour mobile number</string>
    <string name="str_data_usage">Data usage summary</string>
    <string name="str_data_usage1">Data usage</string>
    <string name="str_no_subscription">No subscription</string>
    <string name="str_storage">Storage is almost full</string>
    <string name="str_view_models">View Models</string>
    <string name="str_premium">Premium</string>
    <string name="str_recent_models">Recent Models</string>
    <string name="str_view_all">View All</string>
    <string name="str_meatball_options">Options</string>
    <string name="str_renew_now">Renew now</string>
    <string name="str_have_account">I already have an account</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_model_scanned">Models scanned</string>
    <string name="str_my_sites">My sites</string>
    <string name="str_add_sites">Add site</string>
    <string name="str_upgrade_now">Upgrade now</string>
    <string name="str_workspace">Workspace</string>
    <string name="str_repository">Repository</string>
    <string name="str_recent_files">Recent files</string>
    <string name="str_account_settings">Account settings</string>
    <string name="str_display_name">Display Name</string>
    <string name="str_sub_plan">Subscription plan</string>
    <string name="str_upgrade">Upgrade</string>
    <string name="str_deactivate">Deactivate your account</string>
    <string name="str_sign_out">Sign out</string>
    <string name="str_AddPhoto">Add Photo</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_ChoosefromLibrary">Choose from Library</string>
    <string name="str_TakePhoto">Take Photo</string>
    <string name="str_resend"><u>Resend Code</u></string>
    <string name="str_verify_email">Verify your email</string>
    <string name="str_email_content">Email verification is required to\nlogin your account</string>
    <string name="str_send_email_verification">Send email verification link</string>
    <string name="str_question">Questions? Email us at</string>
    <string name="str_enter_digits_otp">Enter 6 digits OTP</string>
    <string name="str_get_otp">Didn\'t get OTP?</string>
    <string name="str_resend_otp">Resend OTP</string>
    <string name="str_please_input">Please input</string>
    <string name="str_enter_otp_error">Please enter the OTP sent to your phone number.</string>
    <string name="str_phone_error">Please check your phone number</string>
    <string name="str_password_match">Password didn\'t not match</string>
    <string name="str_subscribe">Subscribe</string>
    <string name="str_pricing_plans">Pricing plans</string>
    <string name="str_personal">Personal</string>
    <string name="str_business">Business</string>
    <string name="str_experience_faster">experience faster, smoother and more\nprecise mobile device scans </string>
    <string name="str_process">If you want better quality, \ncontinue to click more photos or \nupload to process.</string>
    <string name="str_add_new_board">Add new board</string>
    <string name="str_delete_project">Delete project</string>
    <string name="str_no_repositories_found">No repositories found</string>
    <string name="str_no_project_found">No project found</string>
    <string name="str_no_files_found">No recent files found</string>
    <string name="str_no_notifications_today_found">No notifications</string>
    <string name="str_no_earlier_notifications_found">No notifications</string>
    <string name="str_earlier_notifications">Earlier notifications</string>
    <string name="str_search_model">Search model...</string>
    <string name="str_want_delete">Do you want to delete the</string>
    <string name="str_want_confirm_delete">Do you want to delete</string>
    <string name="str_almost_there">Almost there!</string>
    <string name="str_individual">Individual</string>
    <string name="str_congratulations">Congratulations.\nYour subscription was successfull.</string>
    <string name="str_create_new">Create New</string>
    <string name="str_join_existing">Join existing</string>
    <string name="str_create_new_organization">Create new organization</string>
    <string name="str_enter_organization_name">Enter organization name</string>
    <string name="str_join_existing_organization">Join existing organization</string>
    <string name="str_enter_organization_id">Enter organization ID</string>
    <string name="str_create">Create</string>
    <string name="str_request">Request</string>
    <string name="manage_users">Manage Users</string>
    <string name="str_edit_repository">Edit repository</string>
    <string name="str_delete_repository">Delete repository</string>
    <string name="str_edit_workspace">Edit workspace</string>
    <string name="add_repository">Add</string>
    <string name="common_continue" translatable="false">Continue</string>
    <string name="common_organization_name" translatable="false">Organization Name</string>
    <string name="common_need_help" translatable="false">Need help? Reach out to <u>hello@luxolis.ai</u></string>
    <string name="common_check_spam" translatable="false">If you don’t get the email soon, check your spam folder</string>
    <string name="common_back_to_login" translatable="false">Back to Login</string>
    <string name="registration_email_screen_agree" translatable="false">By signing up, you agree to our</string>
    <string name="registration_email_screen_terms_of_service" translatable="false"><u>Terms of Service</u></string>
    <string name="registration_email_screen_and" translatable="false">and</string>
    <string name="registration_email_screen_privacy_policy" translatable="false"><u>Privacy Policy</u></string>
    <string name="add_organization_screen_title" translatable="false">Add an Organization</string>
    <string name="add_organization_screen_subtitle" translatable="false">Enter your organization information below</string>
    <string name="add_organization_screen_upload_logo" translatable="false">Upload Logo</string>
    <string name="add_organization_screen_choose_file" translatable="false">Choose File</string>
    <string name="add_organization_screen_file_params_size" translatable="false">Max file size 100MB</string>
    <string name="add_organization_screen_file_params_pixels" translatable="false">48 pixels X 48 pixels</string>
    <string name="add_organization_screen_file_params_format" translatable="false">PNG, JPG</string>
    <string name="add_organization_screen_name_error" translatable="false">Please enter a name with 3 or more characters</string>
    <string name="check_email_screen_title" translatable="false">Check your Email</string>
    <string name="check_email_screen_subtitle" translatable="false">We sent an email to %s with a link to verify your account</string>
    <string name="check_email_screen_resend_link" translatable="false">Resend Link</string>
</resources>