<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black">

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_email_screen_agree"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/registration_email_screen_terms_of_service"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/text_agree"
        app:layout_constraintTop_toTopOf="parent"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/registration_email_screen_and"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/text_terms"
        app:layout_constraintTop_toTopOf="parent"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="@string/registration_email_screen_privacy_policy"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/text_and"
        app:layout_constraintTop_toTopOf="parent"
        app:textfont="@string/Gilroy_Regular" />
</androidx.constraintlayout.widget.ConstraintLayout>