<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/image_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_circle_blue"/>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_stroke_blue_white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>