<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_dark_3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_blur_log_in" />

    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/check_email_screen_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:textfont="@string/Gilroy_SemiBold" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:textfont="@string/Gilroy_Regular"
        tools:text="@string/check_email_screen_subtitle" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_check_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/common_check_spam"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/button_back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_purple_8"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/common_back_to_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_check_email"
        app:textfont="@string/Gilroy_SemiBold" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/button_resend_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/check_email_screen_resend_link"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back_to_login"
        app:textfont="@string/Gilroy_SemiBold" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/common_need_help"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_resend_link"
        app:textfont="@string/Gilroy_Regular" />

    <FrameLayout
        android:id="@+id/flProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_common_medium"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>