<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_dark_3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_blur_log_in" />

    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar_login_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_organization_screen_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:textfont="@string/Gilroy_SemiBold" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_organization_screen_subtitle"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:textfont="@string/Gilroy_Regular" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_organization_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/common_organization_name"
        android:textColorHint="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_organization_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_edit_text_onboarding"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/gray_300"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/add_organization_screen_name_error"
        android:textColor="@color/red_error"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_organization_name"
        app:textfont="@string/Gilroy_Regular" />

    <ImageView
        android:id="@+id/image_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text_input_layout_organization_name"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout_organization_name"
        app:tint="@color/red_error" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_upload_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_organization_screen_upload_logo"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_error"
        app:textfont="@string/Gilroy_SemiBold" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/button_choose_file"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_select_account_type"
        android:gravity="end"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/add_organization_screen_choose_file"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/text_upload_logo"
        app:layout_constraintTop_toBottomOf="@id/text_upload_logo"
        app:textfont="@string/Gilroy_SemiBold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_upload_file"
        app:layout_constraintBottom_toBottomOf="@id/button_choose_file"
        app:layout_constraintStart_toStartOf="@id/button_choose_file"
        app:layout_constraintTop_toTopOf="@id/button_choose_file" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_max_file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_organization_screen_file_params_size"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/button_choose_file"
        app:layout_constraintTop_toBottomOf="@id/button_choose_file"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_pixels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_organization_screen_file_params_pixels"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/button_choose_file"
        app:layout_constraintTop_toBottomOf="@id/text_max_file_size"
        app:textfont="@string/Gilroy_Regular" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/text_file_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_organization_screen_file_params_format"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/button_choose_file"
        app:layout_constraintTop_toBottomOf="@id/text_pixels"
        app:textfont="@string/Gilroy_Regular" />

    <include
        android:id="@+id/view_upload_logo"
        layout="@layout/view_upload_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_file_format" />

    <com.luxpmsoft.luxaipoc.widget.TextViewFonts
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/bg_purple_8_disabled"
        android:enabled="false"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/common_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textfont="@string/Gilroy_SemiBold" />

    <FrameLayout
        android:id="@+id/fl_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="animation.json"
            app:lottie_loop="true" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_upload_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="view_upload_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>